--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,51 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
+ <div class="row white food2-image">
+       <header>
+    <nav class="transparent">
+      <div class="nav-wrapper">
+        <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
+        <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+          <li class="waves-effect waves-light"><a href="/login">Login</a></li>
+          <li><a class="white-text logoutBtn">Logout</a></li>
+          <li class="waves-effect waves-light"><a href="/">Home</a></li>
+          <li class="waves-effect waves-light"><a href="/recipes">Recipes</a></li>
+          <li><a class="white-text" href="/pantry">My Pantry</a></li>
+          <li><a class="white-text" href="/groceryList">Grocery List</a></li>
+          <li class="waves-effect waves-light"><a href="/about">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css"
-    integrity="sha512-t38vG/f94E72wz6pCsuuhcOPJlHKwPy+PY+n1+tJFzdte3hsIgYE7iEpgg/StngunGszVMrRfvwZinrza0vMTA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css" />
-  <title>Platters and Pantries</title>
-  <link rel="fav icon" type="image/png" href="/links/Platters and Pantries">
-</head>
+    <ul class="sidenav black white-text" id="mobile">
+      <li><a class="white-text" href="/login">Login</a></li>
+      <li><a class="white-text logoutBtn">Logout</a></li>
+      <li><a class="white-text" href="/">Home</a></li>
+      <li><a class="white-text" href="/recipes">Recipes</a></li>
+      <li><a class="white-text" href="/pantry">My Pantry</a></li>
+      <li><a class="white-text" href="/groceryList">Grocery List</a></li>
+      <li><a class="white-text" href="/about">About</a></li>
+    </ul>
 
-<body class="grey darken-4">
-  <div>
-    <header>
-      <nav class="transparent">
-        <div class="nav-wrapper">
-          <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
-          <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-          <ul class="right hide-on-med-and-down">
-            <li class="waves-effect waves-light"><a href="/login">Login</a></li>
-            <li class="waves-effect waves-light"><a href="/home">Home</a></li>
-            <li class="waves-effect waves-light"><a href="/recipes">Recipes</a></li>
-            <li class="waves-effect waves-light"><a href="/about">About</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-      <ul class="sidenav white-text" id="mobile">
-        <li><a class="white-text" href="/login">Login</a></li>
-        <li><a class="white-text" href="/home">Home</a></li>
-        <li><a class="white-text" href="/recipes">Recipes</a></li>
-        <li><a class="white-text" href="/about">About</a></li>
-
-      </ul>
-    </header>
-    <div class="row white food2-image">
+  </header>
       <main>
         <div class="col l12 s12 ">
           <div></div>
@@ -126,16 +108,3 @@
 
           </div>
       </main>
-      <!--Scripts Go Here-->
-      <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"
-        integrity="sha512-m2PhLxj2N91eYrIGU2cmIu2d0SkaE4A14bCjVb9zykvp6WtsdriFCiXQ/8Hdj0kssUB/Nz0dMBcoLsJkSCto0Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-      <script src="./js/recipeLookup.js"></script>
-</body>
-
-<footer>
-</footer>
-
-</html>
