finalized shoppingList and pantry

--- a/views/shoppingpage.handlebars
+++ b/views/shoppingpage.handlebars
@@ -66,9 +66,9 @@
               <div>{{this.name}}</div>
               <div>{{this.quantity}}</div>
               <div>{{this.measure}}</div> <a href="#!" class="secondary-content"><i class="material-icons"
-                  data-amount={{this.quantity}} data-id={{this.id}} id="add">add_circle</i><i
+                  data-amount={{this.quantity}} data-id={{this.id}} id="addIndiv">add_circle</i><i
                   class="material-icons" data-amount={{this.quantity}} data-id={{this.id}}
-                  id="delete">delete</i></a>
+                  id="deleteIndiv">delete</i></a>
             </li>
             {{/each}}
         </div>
@@ -79,6 +79,5 @@
         </div>
       </div>
   </main>
-  <script src="/js/addIngredient.js"></script>
-  <script src="/js/shoppingList.js"></script>
   <script src="/js/logout.js"></script>
+  <script src="/js/shoppingList.js"></script>
