--- a/views/storedrecipes.handlebars
+++ b/views/storedrecipes.handlebars
@@ -1,5 +1,5 @@
- <div class="logo-image">
-    <header>
+<div class="logo-image">
+  <header>
     <nav class="transparent">
       <div class="nav-wrapper">
         <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
@@ -30,14 +30,14 @@
   </header>
   <main>
     <div class="row">
-        <h2 class="grey-text text-lighten-3 center padding-t120">Your Saved Recipes</h2>
-        <div class="row">
-             <div class="card-container flex-container col s12 flow-text ">
-
-            <span id="addcard"></span>
-            
-              </div>
-          </div>
+      <h2 class="grey-text text-lighten-3 center padding-t120">Your Saved Recipes</h2>
+      <div class="row">
+        <div class="card-container flex-container col s12 flow-text ">
+          {{#each recipeListItems as |recipeListCard|}}
+          {{> recipeListCard}}
+          {{/each}}
+        </div>
+      </div>
     </div>
-    </div>
-  </main>
+</div>
+</main>
