trying to add refresh to grocerylist

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,5 +1,5 @@
- <div class="row white food2-image">
-       <header>
+<div class="row white food2-image">
+  <header>
     <nav class="transparent">
       <div class="nav-wrapper">
         <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
@@ -28,83 +28,87 @@
     </ul>
 
   </header>
-      <main>
-        <div class="col l12 s12 ">
-          <div></div>
+  <main>
+    <div class="col l12 s12 ">
+      <div></div>
 
 
-          <div class="row transparent-white">
-            <main>
-              <div class="col l6 s12 ">
-                <h2 class="black-text ">About Us</h2>
-                <h3 class="black-text light-weight">
-                  We are the Pleasant Pantry Professionals. We are a group of 4 Junior Northwestern Web Developers. With
-                  our combine skillset, our application was built using Materialize CSS and Edamam API. With this app we
-                  wanted to allow users to create a shopping list based on a recipe that they searched. They can add and
-                  remove items from a grocery list to allow them to customize their personal shopping items for a
-                  delicious home made meal experience. <br>Happy Eating!
+      <div class="row transparent-white">
+        <main>
+          <div class="col l6 s12 ">
+            <h2 class="black-text ">About Us</h2>
+            <h3 class="black-text light-weight">
+              We are the Pleasant Pantry Professionals. We are a group of 4 Junior Northwestern Web Developers. With
+              our combine skillset, our application was built using Materialize CSS and Edamam API. With this app we
+              wanted to allow users to create a shopping list based on recipes that they searched for. They can add and
+              remove items from a grocery list to allow them to customize their personal shopping items for a
+              delicious home made meal experience. <br>Happy Eating!
 
-                </h3>
-              </div>
-              <div class="col l6 s12 ">
-                <div class="food-image"></div>
-              </div>
+            </h3>
           </div>
-          <div class="row">
-            <main>
-              <div class="center-100pc flex-container col l3 s12 flow-text ">
-                <div>
-                  <img src="./links/team images/Lea.JPG" alt="image of lea" width="200" height="200">
-                  <h4><b>Lea</b></h4>
-                  <h5 class="white-text">
-                    Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
-                    broaden my skillsets on a different platform and learn the user interface and user experience side
-                    of web development.
-                  </h5>
-                </div>
-                <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/lealinnea">Github</a>
-                <a class="btn-flat deep-orange-text darken-2-text" href="https://lealinnea.github.io/portfolio/">Portfolio</a>
-              </div>
-              <div class="center-100pc flex-container col l3 s12 flow-text ">
-                <div>
-                  <img src="./links/team images/Theo.jpg" alt="image of lea" width="200" height="200">
-                  <h4><b>Theo</b></h4>
-                  <h5 class="white-text">
-                    Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
-                    broaden my skillsets on a different platform and learn the user interface and user experience side
-                    of web development.
-                  </h5>
-                </div>
-                <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/lealinnea">Github</a>
-                <a class="btn-flat deep-orange-text darken-2-text" href="https://lealinnea.github.io/portfolio/">Portfolio</a>
-              </div>
-              <div class="center-100pc flex-container col l3 s12 flow-text ">
-                <div>
-                  <img src="./links/team images/Theo.jpg" alt="image of lea" width="200" height="200">
-                  <h4><b>Abeer</b></h4>
-                  <h5 class="white-text">
-                    Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
-                    broaden my skillsets on a different platform and learn the user interface and user experience side
-                    of web development.
-                  </h5>
-                </div>
-                <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/lealinnea">Github</a>
-                <a class="btn-flat deep-orange-text darken-2-text" href="https://lealinnea.github.io/portfolio/">Portfolio</a>
-              </div>
-              <div class="center-100pc flex-container col l3 s12 flow-text ">
-                <div>
-              
-                  <img src="./links/team images/Will.jpg" alt="image of lea" width="200" height="200">
-                  <h4><b>Will</b></h4>
-                  <h5 class="white-text">
-                    Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
-                    broaden my skillsets on a different platform and learn the user interface and user experience side
-                    of web development.
-                  </h5>
-                </div>
-                <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/lealinnea">Github</a>
-                <a class="btn-flat deep-orange-text darken-2-text" href="https://lealinnea.github.io/portfolio/">Portfolio</a>
-              </div>
-
+          <div class="col l6 s12 ">
+            <div class="food-image"></div>
           </div>
-      </main>
+      </div>
+      <div class="row">
+        <main>
+          <div class="center-100pc flex-container col l3 s12 flow-text ">
+            <div>
+              <img src="./links/team images/Lea.JPG" alt="image of lea" width="200" height="200">
+              <h4><b>Lea</b></h4>
+              <h5 class="white-text">
+                Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
+                broaden my skillsets on a different platform and learn the user interface and user experience side
+                of web development.
+              </h5>
+            </div>
+            <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/lealinnea">Github</a>
+            <a class="btn-flat deep-orange-text darken-2-text"
+              href="https://lealinnea.github.io/portfolio/">Portfolio</a>
+          </div>
+          <div class="center-100pc flex-container col l3 s12 flow-text ">
+            <div>
+              <img src="./links/team images/Theo.jpg" alt="image of Theo" width="200" height="200">
+              <h4><b>Theo</b></h4>
+              <h5 class="white-text">
+                Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
+                broaden my skillsets on a different platform and learn the user interface and user experience side
+                of web development.
+              </h5>
+            </div>
+            <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/Tward9">Github</a>
+            <a class="btn-flat deep-orange-text darken-2-text"
+              href="https://tward9.github.io/Portfolio_Draft_Two/">Portfolio</a>
+          </div>
+          <div class="center-100pc flex-container col l3 s12 flow-text ">
+            <div>
+              <img src="./links/team images/Theo.jpg" alt="image of lea" width="200" height="200">
+              <h4><b>Abeer</b></h4>
+              <h5 class="white-text">
+                Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
+                broaden my skillsets on a different platform and learn the user interface and user experience side
+                of web development.
+              </h5>
+            </div>
+            <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/lealinnea">Github</a>
+            <a class="btn-flat deep-orange-text darken-2-text"
+              href="https://lealinnea.github.io/portfolio/">Portfolio</a>
+          </div>
+          <div class="center-100pc flex-container col l3 s12 flow-text ">
+            <div>
+
+              <img src="./links/team images/Will.jpg" alt="image of lea" width="200" height="200">
+              <h4><b>Will</b></h4>
+              <h5 class="white-text">
+                Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
+                broaden my skillsets on a different platform and learn the user interface and user experience side
+                of web development.
+              </h5>
+            </div>
+            <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/lealinnea">Github</a>
+            <a class="btn-flat deep-orange-text darken-2-text"
+              href="https://lealinnea.github.io/portfolio/">Portfolio</a>
+          </div>
+
+      </div>
+  </main>
