--- a/views/pantrypage.handlebars
+++ b/views/pantrypage.handlebars
@@ -65,9 +65,8 @@
             <li class="collection-item">
               <div>{{this.name}}</div>
               <div>{{this.quantity}}</div>
-              <div>{{this.measure}}</div> <a href="#!" class="secondary-content"><i class="material-icons"
-                  data-amount={{this.quantity}} data-id={{this.id}} id="addIndiv">add_circle</i><i
-                  class="material-icons" data-amount={{this.quantity}} data-id={{this.id}}
+              <div>{{this.measure}}</div> <a href="#!" class="secondary-content">
+                <i class="material-icons" data-amount={{this.quantity}} data-id={{this.id}}
                   id="deleteIndiv">delete</i></a>
             </li>
             {{/each}}
