working on minor details

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -78,7 +78,7 @@
   </main>
   {{/if}}
   {{#unless logged_in}}
-  <a class="waves-effect waves-light btn center-100pc" href="/login">Please Log In</a>
+  <a class="waves-effect waves-light btn margin-top-25pc center-25pc-log" href="/login">Please Log In</a>
   {{/unless}}
 </div>
 <script src="/js/recipeLookup.js"></script>
