--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,7 +96,7 @@ main {
 }
 .chef-image {
   background-image: url("../links/chef2.png");
-  height: 750px;
+  height: 1000px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -178,6 +178,14 @@ main {
   width: 25%;
 }
 @media only screen and (max-width: 650px) {
+  .center-25pc {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 650px) {
   .center-page {
     width: 100%;
     padding-right: 40px;
@@ -190,12 +198,26 @@ main {
   margin-right: auto;
   width: 50%;
 }
+.center-25pc-log {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+}
+@media only screen and (max-width: 600px) {
+  .center-25pc-log {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+}
 @media only screen and (max-width: 600px) {
 .center-50pc-MB {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 100%;
 }
 }
 .center-100pc {
