fixed navbar, added bio for aboutme

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -71,9 +71,7 @@
               <img src="./links/team images/Theo.jpg" alt="image of Theo" width="200" height="200">
               <h4><b>Theo</b></h4>
               <h5 class="white-text">
-                Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
-                broaden my skillsets on a different platform and learn the user interface and user experience side
-                of web development.
+                Hello, my name is Theo! My background is orriginally in mechanical engineering, but I'm fully embracing the world of web and software development! I'm looking to dive in and expand my skills as I make this exciting career change. 
               </h5>
             </div>
             <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/Tward9">Github</a>
