updated alt text for dish page

--- a/views/dish.handlebars
+++ b/views/dish.handlebars
@@ -45,7 +45,7 @@
         </div>
 
         <div class="col l6 s12 margin-top-15pc">
-          <img class="dish-img" src={{recipes.recipe.image}} alt="salad" />
+          <img class="dish-img" src={{recipes.recipe.image}} alt={{recipes.recipe.label}} />
           <p class="center padding-tb40"> Add Ingredients to shopping list and Save recipe for later</p>
           <a id="addIngredientBtn" class="waves-effect waves-light btn center-50pc">SAVE AND ADD</a>
         </div>
