final css edits

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,5 +1,5 @@
 <div class="row white food2-image">
-  <header>
+ <header>
     <nav class="transparent">
       <div class="nav-wrapper">
         <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
@@ -9,8 +9,8 @@
           <li><a class="white-text logoutBtn">Logout</a></li>
           <li class="waves-effect waves-light"><a href="/">Home</a></li>
           <li class="waves-effect waves-light"><a href="/recipes">Recipes</a></li>
-          <li><a class="white-text" href="/pantry">My Pantry</a></li>
           <li><a class="white-text" href="/groceryList">Grocery List</a></li>
+          <li><a class="white-text" href="/pantry">My Pantry</a></li>
           <li class="waves-effect waves-light"><a href="/about">About</a>
           </li>
         </ul>
@@ -22,8 +22,8 @@
       <li><a class="white-text logoutBtn">Logout</a></li>
       <li><a class="white-text" href="/">Home</a></li>
       <li><a class="white-text" href="/recipes">Recipes</a></li>
-      <li><a class="white-text" href="/pantry">My Pantry</a></li>
       <li><a class="white-text" href="/groceryList">Grocery List</a></li>
+      <li><a class="white-text" href="/pantry">My Pantry</a></li>
       <li><a class="white-text" href="/about">About</a></li>
     </ul>
 
@@ -80,7 +80,7 @@
           </div>
           <div class="center-100pc flex-container col l3 s12 flow-text ">
             <div>
-              <img src="./links/team images/Theo.jpg" alt="image of lea" width="200" height="200">
+              <img src="./links/team images/Abeer.jpg" alt="image of abeer" width="200" height="200">
               <h4><b>Abeer</b></h4>
               <h5 class="white-text">
                 Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
@@ -110,3 +110,5 @@
 
       </div>
   </main>
+  <script src="/js/recipeLookup.js"></script>
+<script src="/js/logout.js"></script>
