--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  color: rgb(223, 223, 223);
+  /* color: rgb(223, 223, 223); */
 }
 
 /* =====Fonts and Styles====*/
@@ -74,7 +74,13 @@ main {
   width: 80%;
   margin: auto;
 }
-
+.fs {
+  background-image: url("../links/spoon_fork.png");
+  width: 40px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 .logo {
   margin-top: 20px;
   margin-left: 50px;
@@ -162,7 +168,7 @@ main {
 
 }
 .dish-image {
-  background-image: url("../links/steak.jpg");
+  background-image: url("../links/steak.png");
   min-height: 1000px;
   background-size: cover;
   background-position: center;
@@ -183,6 +189,10 @@ main {
 .searchbar{
     width: 50%;
 }
+@media only screen and (max-width: 600px){ 
+.searchbar{
+  width: 100%;
+}}
 .center-25pc {
   display: block;
   margin-left: auto;
@@ -244,6 +254,9 @@ main {
 .margin-top-15pc {
   margin-top: 15%;
 }
+.margin-top-10pc {
+  margin-top: 10%;
+}
 .vl {
   border-left: 4px solid #e84830;
   padding-left: 10px;
@@ -279,6 +292,7 @@ main {
   border-radius: 15px;
   color: #e84830;
   border: none;
+  border-bottom: 1px white;
 }
 .collection-header {
   color: rgb(215, 215, 215);
@@ -288,8 +302,13 @@ main {
   background-color: rgba(0, 0, 0, 0.6);
 }
 .collection .collection-item {
+  padding:10px 0px;
   border-bottom: none;
+  line-height: 2rem;
   background-color: rgba(0, 0, 0, 0.6);
+
+}.secondary-content{
+  color:orange;
 }
 
 .flex-container {
@@ -342,7 +361,10 @@ main {
 .padding-t120{
   padding-top: 120px;
 }
-.padding-tb40{
+.padding-tb20{
   padding-top: 20px;
   padding-bottom:20px;
+}
+.padding-b20{
+  padding-bottom: 20px;
 }
