--- a/views/shoppingpage.handlebars
+++ b/views/shoppingpage.handlebars
@@ -9,8 +9,8 @@
           <li><a class="white-text logoutBtn">Logout</a></li>
           <li class="waves-effect waves-light"><a href="/">Home</a></li>
           <li class="waves-effect waves-light"><a href="/recipes">Recipes</a></li>
-          <li><a class="white-text" href="/pantry">My Pantry</a></li>
           <li><a class="white-text" href="/groceryList">Grocery List</a></li>
+          <li><a class="white-text" href="/pantry">My Pantry</a></li>
           <li class="waves-effect waves-light"><a href="/about">About</a>
           </li>
         </ul>
@@ -22,8 +22,8 @@
       <li><a class="white-text logoutBtn">Logout</a></li>
       <li><a class="white-text" href="/">Home</a></li>
       <li><a class="white-text" href="/recipes">Recipes</a></li>
-      <li><a class="white-text" href="/pantry">My Pantry</a></li>
       <li><a class="white-text" href="/groceryList">Grocery List</a></li>
+      <li><a class="white-text" href="/pantry">My Pantry</a></li>
       <li><a class="white-text" href="/about">About</a></li>
     </ul>
 
@@ -31,7 +31,7 @@
   <main>
     <div class="row">
       <form class="col s12">
-        <div class="row">
+        <div class="row margin-top-15pc">
           <div class="input-field col s6">
             <input id="AddNewItem" type="text" class="validate">
             <label for="AddNewItem">Add New Item</label>
@@ -63,12 +63,10 @@
 
             {{#each shoppingListItems}}
             <li class="collection-item">
-              <div>{{this.name}}</div>
-              <div>{{this.quantity}}</div>
-              <div>{{this.measure}}</div> <a href="#!" class="secondary-content"><i class="material-icons"
+              <div><img src="./links/spoon_fork.png" height="30">{{this.name}} |<span class="orange-text"> Amount: </span><span class="white-text">{{this.quantity}}</span> | <span class="orange-text"></span> {{this.measure}} <a href="#!" class="secondary-content"><i class="material-icons"
                   data-amount={{this.quantity}} data-id={{this.id}} id="addIndiv">add_circle</i><i
                   class="material-icons" data-amount={{this.quantity}} data-id={{this.id}}
-                  id="deleteIndiv">delete</i></a>
+                  id="deleteIndiv">delete</i></a></div>
             </li>
             {{/each}}
         </div>
