--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,7 +67,9 @@ nav li {
   line-height: 2.5;
   margin-right: 40px;
 }
-
+input{
+  color: white;
+}
 
 /*===========*/
 main {
@@ -99,7 +101,7 @@ main {
     margin-left: auto;
     margin-right: auto;
   }
-  @media only screen and (max-width: 400px) {
+  @media only screen and (max-width: 420px) {
     .dish-img {
       width: 250px;
       display: block;
