fixed dish logo

--- a/views/dish.handlebars
+++ b/views/dish.handlebars
@@ -3,7 +3,7 @@
  <header>
     <nav class="transparent">
       <div class="nav-wrapper">
-        <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
+        <img href="#" class="brand-logo logo" src="/links/Platters and Pantries.png">
         <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li class="waves-effect waves-light"><a href="/login">Login</a></li>
@@ -46,7 +46,7 @@
 
         <div class="col l6 s12 margin-top-15pc">
           <img class="dish-img" src={{recipes.recipe.image}} alt={{recipes.recipe.label}} />
-          <p class="center padding-tb40"> Add Ingredients to shopping list and Save recipe for later</p>
+          <p class="center white-text padding-tb20"> Add Ingredients to shopping list and Save recipe for later</p>
           <a id="addIngredientBtn" class="waves-effect waves-light btn center-50pc">SAVE AND ADD</a>
         </div>
       </div>
