--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -83,24 +83,20 @@
               <img src="./links/team images/Abeer.jpg" alt="image of abeer" width="200" height="200">
               <h4><b>Abeer</b></h4>
               <h5 class="white-text">
-                Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
-                broaden my skillsets on a different platform and learn the user interface and user experience side
-                of web development.
+                Hey, It's Abeer. I graduated as a Mechanical Engineer but trying to expand my portfolio into Web Development. I hope to combine the skillsets from both fields to broaden my oppurtunities.
               </h5>
             </div>
-            <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/lealinnea">Github</a>
+            <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/anaeem23">Github</a>
             <a class="btn-flat deep-orange-text darken-2-text"
-              href="https://lealinnea.github.io/portfolio/">Portfolio</a>
+              href="https://anaeem23.github.io/Northwestern_BootCamp-02-Homework/">Portfolio</a>
           </div>
           <div class="center-100pc flex-container col l3 s12 flow-text ">
             <div>
 
-              <img src="./links/team images/Will.jpg" alt="image of lea" width="200" height="200">
+              <img src="./links/team images/Will.jpg" alt="image of Will" width="200" height="200">
               <h4><b>Will</b></h4>
               <h5 class="white-text">
-                Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
-                broaden my skillsets on a different platform and learn the user interface and user experience side
-                of web development.
+                Hey, I'm Will. I moved back to Logan Square after four years in Michigan helping my ageing grandparents. Been looking to start fresh after some time working as a cable tech, and a coding bootcamp seemed like a good opportunity. In my spare time I write children's books (current work in progress: "Turnip Hero"), am learning harmonica, recently started a food blog based on my late mom's recipes, and I plan to take up boxing in the near future.
               </h5>
             </div>
             <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/lealinnea">Github</a>
